2004-10-10  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Added Custom Widgets chapter, so far 
	with a Custom Container section and example.

2004-09-04 Jonathan Brandmeyer <jbrandmeyer@earthlink.net>

	* gdk/src/screen.hg: get_default(): Take an extra reference so that
	the Screen is not deleted too early.

2004-09-02  Murray Cumming  <murrayc@murrayc.com>

	* This is the gtkmm-2-4 branch.

2004-08-30  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/dialogs/fileselection/examplewindow.cc: Removed a 
	misleading include.

2.4.5:

2004-08-07  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/toolbar.hg: Class documentation: remove mention of 
	tools() which no longer exists.
	* examples/book/treeview/drag_and_drop: Correct the implementation 
	of the vfuncs so that they actually work. In particular they are const 
	in gtkmm 2.4. 

2004-07-16  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/settings.ccg: get_default(): Use reference() instead of an 
	extra parameter, to fix the build.

2004-07-15  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/settings.ccg: get_default(): Take an extra reference so that 
	the Settings is not deleted too early. Bug #147592.

2004-07-15  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/treeview/: Added popup example, which was already in 
	gtkmm 2.0/2.2.

2004-07-08  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtk_tut.xml: libglademm chapter: Mention memory 
	management.

2004-07-08  Murray Cumming  <murrayc@murrayc.com>

	* Patch from Christopher Palm in bug #145594, to change ActionGroup and 
	EntryCompletion constructors from private to protected. Lets hope 
	there are no more of these, because this is technically API change in 
	the stable branch. However, the methods already exist and are  tested 
	by the create() methods, and are simple and generated, and therefore 
	unlikely to have errors. Also, this change will only be useful to a 