@@ -1,3 +1,8 @@
+2004-10-17  Gene Ruebsamen  <gene@erachampion.com>
+	* docs/tutorial/gtkmm-tut.xml: Updated the Windows installation
+	appendix by providing a link to the latest Gtk+ Win32 installer, 
+	and updating the installation instructions.
+
 2004-10-10  Murray Cumming  <murrayc@murrayc.com>
 
 	* docs/tutorial/gtkmm-tut.xml: Added Custom Widgets chapter, so far 
